--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,17 @@
         <li><a href="">Product</a></li>
         <li><a href="">Service</a></li>
         <li><a href="">Gallery</a></li>
-        <li><a href="">Abbout</a></li>
+        <li><a href="">About</a></li>
       </ul>
 
       <div class="menu-toggle">
+        <input type="checkbox">
         <span></span>
         <span></span>
         <span></span>
       </div>
     </nav>
+
+    <script src="script.js"></script>
   </body>
 </html>
